--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -1,4 +1,7 @@
-body { @include body-font; }
+body { 
+  @include body-font;
+  overflow-x: hidden;
+ }
 
 .trans { transition: all 0.5s ease;}
 .z-100 { z-index: 100; }
