--- a/scss/_backgrounds.scss
+++ b/scss/_backgrounds.scss
@@ -1,13 +1,14 @@
 // Styling for the masthead
 .bg-img {
-    background-image: url('../img/header-bg.jpg');
+    background-image: url('https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');
     background-repeat: no-repeat;
     background-attachment: scroll;
-    background-position: center center;
+    background-position: bottom left;
+    background-size: cover;
   }
 
 .bg-img-parallax {
-    background-image: url('../img/header-bg.jpg');
+    background-image: url('https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80');
     height: 60vh; 
     background-attachment: fixed;
     background-position: center;
