--- a/scss/_swiper.scss
+++ b/scss/_swiper.scss
@@ -1,5 +1,6 @@
+
 .swiper-container-hero, .swiper-overlay-text {
-  height: 700px;
+  height: 90vh;
 }
 .swiper-pagination-hero {
   margin-top: -20px;
@@ -7,7 +8,7 @@
   z-index: 10;
 }
 .swiper-button-prev, .swiper-button-next {
-  top: 33%;
+  top: 53% !important;
   margin: auto 2rem;
 }
 
@@ -21,4 +22,6 @@
   opacity: 1;
   background: $bright;
 }
+
+
 
