--- a/scss/_backgrounds.scss
+++ b/scss/_backgrounds.scss
@@ -48,7 +48,7 @@
   }
   @media (pointer: coarse) and (hover: none) {
     .bg-video {
-      background: url('/img/youtube.jpg') black no-repeat center top scroll;
+      background: url('https://images.unsplash.com/photo-1520034475321-cbe63696469a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80') black no-repeat center top scroll;
     }
     .bg-video video {
       display: none;
