--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -14,6 +14,14 @@ body {
     .sm\:show {display: block; }
 }
 
+// Nav
+nav {
+  &.active {
+    background: #22292f;
+    padding: 14px 20px;
+  }
+}
+
 // Video embed
 .embed-responsive {
     cursor: pointer;
