--- a/public/css/main.css
+++ b/public/css/main.css
@@ -8,6 +8,14 @@ body {
   -webkit-font-smoothing: antialiased;
 }
 
+.text-9xl {
+  font-size: 5rem;
+}
+
+.animate-add.active {
+  padding: 0;
+}
+
 .trans {
   transition: all 0.5s ease;
 }
@@ -84,14 +92,6 @@ body {
 .bg-g-purple {
   background-color: #9e21ff;
   background-image: linear-gradient(141deg, #ed21ff 0%, #9e21ff 51%, #9e21ff 75%);
-}
-
-.bg-img {
-  background-image: url("https://images.unsplash.com/photo-1476067897447-d0c5df27b5df?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1650&q=80");
-  background-repeat: no-repeat;
-  background-attachment: scroll;
-  background-position: bottom left;
-  background-size: cover;
 }
 
 .bg-img-parallax {
