--- a/scss/_global.scss
+++ b/scss/_global.scss
@@ -9,9 +9,17 @@ body {
   &.active {  padding: 0; }
  }
 
-.trans { transition: all 0.5s ease;}
+
 .z-100 { z-index: 100; }
 .hide { display: none; }
+
+
+// Transition
+[class^="trans-"], [class*=" trans-"] {
+  .trans { transition: all; }
+}
+.trans { transition: all 0.5s ease; }
+.trans-slow { transition-duration: 1s; }
 
 
 // Small Size
